welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: Missing closing brace `}' assumed here
avance();avance();avance;avance();avance();avance
^RunFour:2: error: expected class or object definition
avance();avance();avance;avance();avance();avance
         ^RunFour:2: error: expected class or object definition
avance();avance();avance;avance();avance();avance
                  ^RunFour:2: error: expected class or object definition
avance();avance();avance;avance();avance();avance
                         ^RunFour:2: error: expected class or object definition
avance();avance();avance;avance();avance();avance
                                  ^RunFour:2: error: expected class or object definition
avance();avance();avance;avance();avance();avance
                                           ^RunFour:3: error: expected class or object definition
if(!estSurBiscuit){;
^RunFour:6: error: Missing closing brace `}' assumed here
{
^